src/test/ui/associated-types/hr-associated-type-bound-2.stderr
error[E0277]: the trait bound `str: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-2.rs:16:14
   |
LL | trait X<'a>
   |       - required by a bound in this
LL | where
LL |     for<'b> <Self as X<'b>>::U: Clone,
   |                                 ----- required by this bound in `X`
...
LL |     type U = str;
   |              ^^^ the trait `std::clone::Clone` is not implemented for `str`

error[E0277]: the trait bound `str: std::clone::Clone` is not satisfied
  --> $DIR/hr-associated-type-bound-2.rs:11:6
   |
LL | / trait X<'a>
LL | | where
LL | |     for<'b> <Self as X<'b>>::U: Clone,
LL | | {
...  |
LL | |     }
LL | | }
   | |_- required by this bound in `X`
LL | 
LL |   impl X<'_> for u32
   |        ^^^^^ the trait `std::clone::Clone` is not implemented for `str`
   |
   = note: required because of the requirements on the impl of `X<'_>` for `u32`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
